// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton Rendering renders loading button with custom loading label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      {
        "opacity": 0.7,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      color="#FFFFFF"
      size="small"
      testID="loading-indicator"
    />
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "600",
          },
          {
            "fontSize": 14,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "marginLeft": 8,
          },
        ]
      }
    >
      Submitting...
    </Text>
  </View>
</View>
`;

exports[`LoadingButton Rendering renders loading button with default label 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      false,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`LoadingButton States renders different sizes 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 12,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      false,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Small
  </Text>
</View>
`;

exports[`LoadingButton States renders different sizes 2`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      false,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Medium
  </Text>
</View>
`;

exports[`LoadingButton States renders different sizes 3`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      false,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Large
  </Text>
</View>
`;

exports[`LoadingButton States renders disabled state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      {
        "opacity": 0.7,
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`LoadingButton States renders full width button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      {
        "alignSelf": "stretch",
      },
      false,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Full Width
  </Text>
</View>
`;
